<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue400_app_levv"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.cadastro.usuario.TelaCadastrarUsuarioActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.beardedhen.androidbootstrap.BootstrapEditText
                            android:id="@+id/editNomeCadUser"
                            style="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="name"
                            android:ems="10"
                            android:hint="@string/nome"
                            android:inputType="textAutoCorrect|textPersonName|text"
                            android:maxLength="20"
                            android:minHeight="70dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:bootstrapBrand="info"
                            app:bootstrapSize="xl"
                            app:roundedCorners="true"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.beardedhen.androidbootstrap.BootstrapEditText
                            android:id="@+id/editSobrenomeCadUser"
                            style="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="name"
                            android:ems="10"
                            android:hint="@string/sobrenome"
                            android:inputType="textPersonName"
                            android:maxLength="20"
                            android:minHeight="70dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:bootstrapBrand="info"
                            app:bootstrapSize="xl"
                            app:roundedCorners="true"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.beardedhen.androidbootstrap.BootstrapEditText
                            android:id="@+id/editDtNascCadUser"
                            style="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/tela_cadastro_data_nascimento_edit"
                            android:inputType="date"
                            android:maxLength="10"
                            android:minHeight="70dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:bootstrapBrand="info"
                            app:bootstrapSize="xl"
                            app:roundedCorners="true"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.beardedhen.androidbootstrap.BootstrapEditText
                            android:id="@+id/editCpfCadUser"
                            style="8sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="###.###.###-##"
                            android:ems="10"
                            android:hint="@string/tela_cadastro_cpf_edit"
                            android:inputType="number"
                            android:maxLength="14"
                            android:minHeight="70dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:bootstrapBrand="info"
                            app:bootstrapSize="xl"
                            app:roundedCorners="true"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usurio"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <RadioGroup
                    android:id="@+id/radio_group_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/rbLojista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lojista"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cliente"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbEntregador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transpotador"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RadioGroup>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/tela_cadastro_usuario_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <FrameLayout
                android:id="@+id/tela_cadastro_usuario_meio_transp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnUserCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/rounded_button"
                    android:drawableLeft="@drawable/icon_drawable_register"
                    android:text="@string/btn_cadastrar"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btnUserLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:drawableLeft="@drawable/icon_drawable_trash"
                    android:text="@string/limpar"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>